Bug 440652 - Appending a bibliography fails to append string macros
Summary: Appending a bibliography fails to append string macros
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.4.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-06 00:48 UTC by Robby Stephenson
Modified: 2021-08-06 01:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2021-08-06 00:48:21 UTC
Appending (or merging) a bibtex collection doesn't copy over the string macros.
Comment 1 Robby Stephenson 2021-08-06 01:28:24 UTC
Git commit 05f94380e5d9015d4739f58f89c6aef663b08d0d by Robby Stephenson.
Committed on 06/08/2021 at 01:27.
Pushed by rstephenson into branch '3.4'.

Add and remove string macros when appending or merging bibliographies
FIXED-IN: 3.4.2

M  +4    -0    ChangeLog
M  +1    -0    src/collections/bibtexcollection.h
M  +43   -0    src/commands/collectioncommand.cpp
M  +4    -0    src/commands/collectioncommand.h

https://invent.kde.org/office/tellico/commit/05f94380e5d9015d4739f58f89c6aef663b08d0d