Add and remove string macros when appending or merging bibliographies

BUG: 440652
FIXED-IN: 3.4.2